# speech-analytics

./: .gitignore  .pre-commit-config.yaml  TODO.md  detailed-hierarchy.md  help.md  index.html  phase_1.md  project-handover.md  pyproject.toml  requirements-dev.txt  structure.md  todo.txt
src/: integration.py
src/analysis/: analyzers.py  compliance_analyzer.py  engine.py  exceptions.py  registry.py  specialized_analyzers.py  types.py
src/analytics/: engine.py
src/assistance/: assistant.py  enhanced_assistant.py  types.py
src/assistance/analyzers/: base.py  interview.py  support.py
src/audio/: buffer.py  capture.py  devices.py  exceptions.py  mixer.py  processor.py  types.py
src/common/: types.py
src/context/: context_manager.py  conversation_integration.py  document_utils.py  exceptions.py  integration.py  manager.py  monitoring.py  role_manager.py  search.py  types.py  utils.py  validation.py
src/conversation/: bedrock.py  client_pool.py  context.py  exceptions.py  manager.py  roles.py  types.py
src/document/: exceptions.py  preprocessor.py  processor.py  roles.py  storage.py  types.py
src/events/: bus.py  types.py
src/export/: manager.py
src/generation/: response_generator.py
src/realtime/: events.py  processor.py
src/response/: exceptions.py  generator.py  templates.py  types.py  validation.py
src/tests/integration/: conftest.py  test_real_services.py
src/tests/test_assistance/: test_enhanced_assistant.py
src/transcription/: aws_transcribe.py  buffer.py  exceptions.py  handlers.py  models.py  types.py
(+24 files in other folders)
