[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
# Exclude specific files or directories
^/foo.py  # example file exclusion
'''

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = []  # Add specific codes here if needed

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src"  # Adjust `--cov=src` if your source folder has a different name
testpaths = [
    "tests",  # Test directory
]
python_files = ["test_*.py"]  # Test file naming pattern
python_classes = ["Test*"]  # Test class naming pattern
python_functions = ["test_*"]  # Test function naming pattern

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
